--- a/ChuckNorrisASP.NET/Properties/launchSettings.json
+++ b/ChuckNorrisASP.NET/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "ChuckNorrisASP.NET": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7097;http://localhost:5205",
+      "applicationUrl": "http://localhost:54871",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
